# pcd_viewer

./: .gitignore  README.md  __init__.py  debug_wrapper.py  main.py  main_window.py  pyproject.toml  requirements.txt
compatibility/: __init__.py
line_detection_output/one_floor_Hough_20250319_112510/: lines.json
tools/: line_detect_beta.py  read_slice.py  slice_analyse.py
tools/configs/: default_params.json  morph_config.json
tools/line_detect_configs/: morph_config.json
ui/: batch_slice_viewer_window.py  height_distribution_widget.py  line_detection_dialog.py  screenshot_dialog.py  sidebar_builder.py  toolbar_builder.py
utils/: geometry_utils.py  line_detection.py  point_cloud.py  point_cloud_handler.py  slice_handler.py  stylesheet_manager.py  visualization.py
